--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     body {
       margin: 0;
       font-family: 'Press Start 2P', cursive;
-      background: url('https://i.ibb.co/6rdNgfs/pixel-stars-bg.png'); /* fondo pixel art estrellas */
+      background: url('https://opengameart.org/sites/default/files/space_background_0.png'); /* Nuevo fondo pixel art del espacio */
       background-size: cover;
+      background-attachment: fixed;
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -83,19 +84,20 @@
   </style>
 </head>
 <body>
-  <img src="https://yt3.googleusercontent.com/ytc/AGIKgqOK5F8Z8u5c6QW9I...s88-c-k-c0x00ffffff-no-rj" alt="Profile" class="profile-pic">
+  <img src="icono400.png" alt="Profile" class="profile-pic">
   <h1>Javi García</h1>
   <p class="description">
     Multinstrumentalist musician. From rock to orchestral music, new age, and electronic sounds.
   </p>
 
   <div class="links">
+    <a class="link-btn" href="https://www.youtube.com/@JaviGarciaS" target="_blank">▶️ YouTube</a>
     <a class="link-btn" href="https://instagram.com/javigarciamusic" target="_blank">📷 Instagram</a>
     <a class="link-btn" href="https://elasticstage.com/javigarcia" target="_blank">🛒 Tienda</a>
     <a class="link-btn" href="https://open.spotify.com/artist/1mW0aWzC1Au5VAmUjJlzD2" target="_blank">🎵 Spotify</a>
     <a class="link-btn" href="https://music.apple.com/es/artist/javi-garc%C3%ADa/435160959" target="_blank">🍏 Apple Music</a>
     <a class="link-btn" href="https://javigarcia.bandcamp.com" target="_blank">💿 Bandcamp</a>
-    <a class="link-btn" href="https://amazon.es/music/player/artists/B009WCZFN7/javi-garcía" target="_blank">🛒 Amazon Music</a>
+    <a class="link-btn" href="https://amazon.es/music/player/artists/B009WCZFN7/javi-garc%C3%ADa" target="_blank">🛒 Amazon Music</a>
     <a class="link-btn" href="https://tidal.com/browse/artist/7594490" target="_blank">🌊 Tidal</a>
   </div>
 
