--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     body {
       margin: 0;
       font-family: 'Press Start 2P', cursive;
-      background: url('https://opengameart.org/sites/default/files/space_background_0.png'); /* Nuevo fondo pixel art del espacio */
+      background: url('background.png'); /* Fondo de pixel art del espacio */
       background-size: cover;
+      background-repeat: no-repeat;
       background-attachment: fixed;
+      background-position: center center;
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -24,7 +26,6 @@
       width: 120px;
       height: 120px;
       border-radius: 8px;
-      border: 4px solid #00ffff;
       margin-bottom: 1rem;
       image-rendering: pixelated;
     }
