--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       max-width: 600px;
       text-align: center;
       font-size: 0.7rem;
-      color: #ccc;
+      color: #fff; /* Ahora la descripción es de color blanco */
       margin-bottom: 2rem;
       line-height: 1.5;
     }
