--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="links">
     <a class="link-btn" href="https://www.youtube.com/@JaviGarciaS" target="_blank">▶️ YouTube</a>
     <a class="link-btn" href="https://instagram.com/javigarciamusic" target="_blank">📷 Instagram</a>
-    <a class="link-btn" href="https://elasticstage.com/javigarcia" target="_blank">🛒 Tienda</a>
+    <a class="link-btn" href="https://elasticstage.com/javigarcia" target="_blank">🛒 Store</a>
     <a class="link-btn" href="https://open.spotify.com/artist/1mW0aWzC1Au5VAmUjJlzD2" target="_blank">🎵 Spotify</a>
     <a class="link-btn" href="https://music.apple.com/es/artist/javi-garc%C3%ADa/435160959" target="_blank">🍏 Apple Music</a>
     <a class="link-btn" href="https://javigarcia.bandcamp.com" target="_blank">💿 Bandcamp</a>
